Updated some pages
