# backend/app/app.js
@@ -5,6 +5,7 @@ const bodyParser = require('body-parser');
 const mongoose = require('mongoose');
 const swaggerJsDoc = require('swagger-jsdoc');
 const swaggerUi = require('swagger-ui-express');
+const cors = require('cors');
 
 const productRoutes = require('./api/routes/products');
 const orderRoutes = require('./api/routes/order');
@@ -12,6 +13,8 @@ const songRoutes = require('./api/routes/song');
 const userRoutes = require('./api/routes/user');
 const blacklistRoutes = require('./api/routes/blacklist');
 const swaggerJSON = require('./api/docs/swagger.json');
+const { appendFileSync } = require('fs');
+
 const swaggerOptions = {
     definition: {
         openapi: '3.0.0',
@@ -23,19 +26,19 @@ const swaggerOptions = {
                 name: "Rudra Sharma",
                 email: "api@rpsh.me"
             },
-            host: "192.168.2.34:3000",
+            host: "https://lyrics.rpsh.me/api/",
             tags: {
                 name: 'Songs',
                 description : "Everything about songs"
             },
-            servers: ["http://192.168.2.34:3000"]
+            servers: ["https://lyrics.rpsh.me/api/"]
         }
     },
     apis: ["./api/routes/*.js"]
 };
 
 const swaggerDocs = swaggerJsDoc(swaggerOptions);
-app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerJSON));
+app.use('/lyrics/v1/docs', swaggerUi.serve, swaggerUi.setup(swaggerJSON));
 
 mongoose.connect('mongodb+srv://robby:' + process.env.MONGO_ATLAS_PW + '@lyrics-api-xb8oz.mongodb.net/test?retryWrites=true&w=majority', {
     useNewUrlParser: true,
@@ -51,19 +54,30 @@ app.use(bodyParser.json());
 
 app.use((req,res,next) => {
     res.header('Access-Control-Allow-Origin', '*');
-    res.header('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept, Authorization');
+   res.header('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept, Authorization');
     if (req.method === 'OPTIONS'){
-        res.header('Access-Control-Allow-Methods', 'PUT,POST,PATCH,DELETE,GET');
+        res.header('Access-Control-Allow-Methods', 'PUT,POST,PATCH,DELETE,GET,OPTIONS');
         return res.status(200).json({})
     }
     next();
 });
 
-app.use('/products', productRoutes);
-app.use('/orders', orderRoutes);
-app.use('/songs', songRoutes);
-app.use('/user', userRoutes);
-app.use('/blacklist', blacklistRoutes);
+//app.use(cors())
+
+// const corsOptions = {
+//     origin: ['*'],
+//     allowedHeaders: ["Content-Type", "Authorization", "Access-Control-Allow-Methods", "Access-Control-Request-Headers"],
+//     credentials: true,
+//     enablePreflight: true
+// }
+
+// app.use(cors());
+// // app.options('*', cors(corsOptions))
+app.use('/lyrics/v1/products', productRoutes);
+app.use('/lyrics/v1/orders', orderRoutes);
+app.use('/lyrics/v1/songs', songRoutes);
+app.use('/lyrics/v1/user', userRoutes);
+app.use('/lyrics/v1/blacklist', blacklistRoutes);
 
 app.use((req,res,next)=> {
     const error = new Error('Not found');
